src/main/java/com/example/jokerexamples/dataflow/bad/bot/TelegBot.java
package com.example.jokerexamples.dataflow.bad.bot;

import org.springframework.stereotype.Service;

/**
 * Простой пример как Ботов часто переносят в 'bot' пакеты,
 * никак не вяжется ни с 3-х звенкой, ни с Гексагоналкой
 */
@Service
public class TelegBot {

}
